--- a/app/src/main/res/layout/activity_download_settings.xml
+++ b/app/src/main/res/layout/activity_download_settings.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:fontFamily="@font/roboto_regular"
+            android:fontFamily="@font/sukhumvittadmai_normal"
             android:paddingStart="10dp"
             android:paddingTop="@dimen/NontonSize15"
             android:paddingBottom="@dimen/NontonSize15"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="34dp"
-            android:fontFamily="@font/roboto_regular"
+            android:fontFamily="@font/sukhumvittadmai_normal"
             android:paddingLeft="@dimen/NontonSize10"
             android:paddingTop="@dimen/NontonSize15"
             android:paddingEnd="10dp"
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:fontFamily="@font/roboto_regular"
+            android:fontFamily="@font/sukhumvittadmai_normal"
             android:paddingStart="10dp"
             android:paddingTop="@dimen/NontonSize15"
             android:paddingBottom="@dimen/NontonSize15"
