--- a/app/src/main/res/layout/asset_detail_fragment.xml
+++ b/app/src/main/res/layout/asset_detail_fragment.xml
@@ -60,7 +60,7 @@
                         android:layout_alignParentLeft="true"
                         android:layout_toLeftOf="@+id/mPremiumStatus"
                         android:ellipsize="end"
-                        android:fontFamily="@font/roboto_medium"
+                        android:fontFamily="@font/sukhumvittadmai_medium"
                         android:lineHeight="@dimen/movie_title_line_height"
                         android:lines="1"
                         android:maxLines="1"
@@ -82,9 +82,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
-                            android:background="@drawable/bordrer_button"
+                            android:background="@drawable/rounded_button"
                             android:ellipsize="end"
-                            android:fontFamily="@font/roboto_regular"
+                            android:fontFamily="@font/sukhumvittadmai_bold"
                             android:gravity="center"
                             android:maxLines="3"
                             android:paddingLeft="@dimen/detailMorePaddingLeft"
@@ -92,7 +92,7 @@
                             android:paddingRight="@dimen/detailMorePaddingLeft"
                             android:paddingBottom="@dimen/detailMorePaddingTop"
                             android:text="@string/buy_now"
-                            android:textColor="@color/moretitlecolor"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/detailBuyNow"
                             android:visibility="gone" />
 
@@ -104,7 +104,7 @@
                             android:layout_marginTop="2dp"
                             android:background="@drawable/rounded_button"
                             android:ellipsize="end"
-                            android:fontFamily="@font/roboto_bold"
+                            android:fontFamily="@font/sukhumvittadmai_bold"
                             android:maxLines="3"
                             android:paddingLeft="@dimen/movie_metadata_txt_show_hide_padding_left"
                             android:paddingTop="@dimen/movie_metadata_txt_show_hide_padding_top"
@@ -129,7 +129,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="@dimen/movie_metadata_tag_margin_margin_right"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:text="@{duration}"
                         android:textColor="@color/white"
                         android:textSize="@dimen/detailSubTitleSize" />
@@ -140,7 +140,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="3dp"
                         android:background="@drawable/rounded_button"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_bold"
                         android:paddingLeft="@dimen/NontonSize8"
                         android:paddingTop="@dimen/NontonSize3"
                         android:paddingRight="@dimen/NontonSize8"
@@ -167,7 +167,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:lineSpacingExtra="2sp"
                     android:maxLines="2"
                     android:text="@{responseApi.description.trim()}"
@@ -195,7 +195,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:fontFamily="@font/roboto_bold"
+                                android:fontFamily="@font/sukhumvittadmai_bold"
                                 android:text="@string/cast"
                                 android:textColor="@color/subtitlecolor"
                                 android:textSize="@dimen/font_medium"
@@ -206,7 +206,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:fontFamily="@font/roboto_regular"
+                                android:fontFamily="@font/sukhumvittadmai_medium"
                                 android:text="@{casttext}"
                                 android:textColor="@color/subtitlecolor"
                                 android:textSize="@dimen/font_small" />
@@ -221,7 +221,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:fontFamily="@font/roboto_bold"
+                                android:fontFamily="@font/sukhumvittadmai_bold"
                                 android:text="@string/crew"
                                 android:textColor="@color/subtitlecolor"
                                 android:textSize="@dimen/font_medium" />
@@ -231,7 +231,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:fontFamily="@font/roboto_regular"
+                                android:fontFamily="@font/sukhumvittadmai_medium"
                                 android:text="@{crewtext}"
                                 android:textColor="@color/subtitlecolor"
                                 android:textSize="@dimen/font_small" />
@@ -257,7 +257,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:ellipsize="end"
-                        android:fontFamily="@font/roboto_bold"
+                        android:fontFamily="@font/sukhumvittadmai_bold"
                         android:gravity="center"
                         android:maxLines="2"
                         android:paddingLeft="@dimen/detailMorePaddingLeft"
@@ -297,7 +297,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:gravity="center"
                         android:text="@string/watchlist"
                         android:textColor="@color/white"
@@ -326,7 +326,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:gravity="center"
                         android:text="@string/like"
                         android:textColor="@color/white"
@@ -354,7 +354,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:gravity="center"
                         android:text="@string/share"
                         android:textColor="@color/white"
