--- a/app/src/main/res/layout/config_failure.xml
+++ b/app/src/main/res/layout/config_failure.xml
@@ -28,7 +28,7 @@
                 android:gravity="center_horizontal"
                 android:text="Alert"
                 android:textSize="15sp"
-                android:fontFamily="@font/roboto_medium"
+                android:fontFamily="@font/sukhumvittadmai_medium"
                 android:textColor="?attr/title_color"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:focusableInTouchMode="true"
@@ -42,7 +42,7 @@
                 android:gravity="center_vertical"
                 android:text="@string/something_went_wrong_at_our_end_please_try_later"
                 android:textSize="13sp"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:textColor="?attr/title_color"
                 android:layout_marginTop="@dimen/_25sdp"
                 android:focusableInTouchMode="true"
@@ -62,7 +62,7 @@
                     android:id="@+id/retryBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/moretitlecolor"
+                    android:background="@color/description_title_yellow"
                     android:text="@string/retry_dms"
                     android:layout_weight="1"
                     android:textColor="@color/white"
@@ -78,7 +78,7 @@
                     android:id="@+id/cancenBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/moretitlecolor"
+                    android:background="@color/description_title_yellow"
                     android:text="@string/cancel"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent" />
