--- a/app/src/main/res/layout/layout_circle_item.xml
+++ b/app/src/main/res/layout/layout_circle_item.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|left"
                 android:background="@drawable/badge_background"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:gravity="top|left"
                 android:text="@string/exclusive"
                 android:textColor="@color/white"
@@ -43,7 +43,7 @@
                 android:layout_gravity="center|bottom"
                 android:layout_marginBottom="@dimen/new_badge_bottom_magin"
                 android:background="@drawable/badge_background"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:gravity="center"
                 android:text="@string/new_badge"
                 android:textColor="@color/white"
