--- a/app/src/main/res/layout/list_download_item.xml
+++ b/app/src/main/res/layout/list_download_item.xml
@@ -79,7 +79,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="top|left"
                     android:ellipsize="end"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:maxLines="1"
                     android:textColor="?attr/download_tvtitle_color"
                     android:textSize="@dimen/itemRowItem" />
@@ -91,7 +91,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginTop="@dimen/_3sdp"
                     android:ellipsize="end"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:maxLines="2"
                     android:minLines="2"
                     android:textColor="?attr/download_description_text_color"
@@ -105,7 +105,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginTop="@dimen/_1sdp"
                     android:ellipsize="end"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:maxLines="1"
                     android:paddingBottom="@dimen/_2sdp"
                     android:text="@{videoItem.description}"
