--- a/app/src/main/res/layout/profile_screen.xml
+++ b/app/src/main/res/layout/profile_screen.xml
@@ -124,7 +124,7 @@
                                                     android:layout_marginLeft="@dimen/NontonSize10"
                                                     android:layout_weight="1"
                                                     android:background="@null"
-                                                    android:fontFamily="@font/roboto_regular"
+                                                    android:fontFamily="@font/sukhumvittadmai_normal"
                                                     android:hint="@string/full_name"
                                                     android:inputType="textEmailAddress"
                                                     android:maxLength="40"
@@ -154,7 +154,7 @@
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 android:layout_marginTop="@dimen/NontonSize3"
-                                                android:fontFamily="@font/roboto_regular"
+                                                android:fontFamily="@font/sukhumvittadmai_normal"
                                                 android:paddingLeft="@dimen/NontonSize30"
                                                 android:textColor="@color/inspection_color"
                                                 android:visibility="invisible" />
@@ -181,7 +181,7 @@
                                                     android:layout_marginLeft="@dimen/NontonSize10"
                                                     android:background="@null"
                                                     android:enabled="false"
-                                                    android:fontFamily="@font/roboto_regular"
+                                                    android:fontFamily="@font/sukhumvittadmai_normal"
                                                     android:gravity="center_vertical"
                                                     android:singleLine="true"
                                                     android:textColor="@color/white"
@@ -216,7 +216,7 @@
                                                         android:layout_weight="1"
                                                         android:background="@null"
                                                         android:enabled="false"
-                                                        android:fontFamily="@font/roboto_regular"
+                                                        android:fontFamily="@font/sukhumvittadmai_normal"
                                                         android:hint="DD/MM/YYYY"
                                                         android:textColor="@color/white"
                                                         android:textColorHint="@color/edit_text"
@@ -261,7 +261,7 @@
                                                     android:layout_weight="1"
                                                     android:background="@null"
                                                     android:digits="0123456789"
-                                                    android:fontFamily="@font/roboto_regular"
+                                                    android:fontFamily="@font/sukhumvittadmai_normal"
                                                     android:hint="XXXXXXXXXX"
                                                     android:inputType="phone"
                                                     android:maxLength="10"
@@ -309,7 +309,7 @@
                                                     android:layout_marginLeft="@dimen/_10sdp"
                                                     android:layout_weight="1"
                                                     android:background="@null"
-                                                    android:fontFamily="@font/roboto_regular"
+                                                    android:fontFamily="@font/sukhumvittadmai_normal"
                                                     android:hint="***************"
                                                     android:inputType="textPassword"
                                                     android:singleLine="true"
@@ -346,7 +346,7 @@
                                                         android:layout_height="wrap_content"
                                                         android:layout_alignLeft="@+id/radioGroup1"
                                                         android:layout_gravity="left"
-                                                        android:fontFamily="@font/roboto_regular"
+                                                        android:fontFamily="@font/sukhumvittadmai_normal"
                                                         android:scaleX="0.8"
                                                         android:scaleY="0.8"
                                                         android:text="@string/male"
@@ -362,7 +362,7 @@
                                                         android:layout_below="@+id/radioGroup1"
                                                         android:layout_alignLeft="@+id/radioGroup1"
                                                         android:layout_marginLeft="@dimen/NontonSize15"
-                                                        android:fontFamily="@font/roboto_regular"
+                                                        android:fontFamily="@font/sukhumvittadmai_normal"
                                                         android:scaleX="0.8"
                                                         android:scaleY="0.8"
                                                         android:text="@string/female"
@@ -392,7 +392,7 @@
                                             android:layout_marginTop="@dimen/_5sdp"
                                             android:layout_marginBottom="@dimen/_10sdp"
                                             android:background="@drawable/badge_background"
-                                            android:fontFamily="@font/roboto_regular"
+                                            android:fontFamily="@font/sukhumvittadmai_bold"
                                             android:gravity="center"
                                             android:text="@string/save"
                                             android:textColor="@color/white"
@@ -418,7 +418,7 @@
                                             <TextView
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="@dimen/_30sdp"
-                                                android:fontFamily="@font/roboto_regular"
+                                                android:fontFamily="@font/sukhumvittadmai_bold"
                                                 android:gravity="center"
                                                 android:text="@string/connct_facebbook"
                                                 android:textColor="@color/white"
@@ -446,7 +446,7 @@
                                             android:layout_height="@dimen/_30sdp"
                                             android:layout_marginTop="@dimen/_5sdp"
                                             android:background="@drawable/rounded_button2"
-                                            android:fontFamily="@font/roboto_regular"
+                                            android:fontFamily="@font/sukhumvittadmai_normal"
                                             android:gravity="center"
                                             android:text="@string/sign_out"
                                             android:textColor="@color/edittextview"
