--- a/app/src/main/res/layout/test_pur.xml
+++ b/app/src/main/res/layout/test_pur.xml
@@ -49,7 +49,7 @@
                         android:layout_marginRight="@dimen/purchaseRigntMargin"
                         android:layout_marginBottom="@dimen/NontonSize4"
                         android:ellipsize="end"
-                        android:fontFamily="@font/roboto_medium"
+                        android:fontFamily="@font/sukhumvittadmai_medium"
                         android:maxLines="1"
                         android:text="Title"
                         android:textColor="@color/white"
@@ -65,7 +65,7 @@
                         android:layout_marginRight="@dimen/purchaseRigntMargin"
                         android:layout_marginBottom="@dimen/NontonSize6"
                         android:ellipsize="end"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:maxLines="2"
                         android:text="Description"
                         android:textColor="@color/white"
@@ -86,7 +86,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/NontonSize20"
                         android:ellipsize="end"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:maxLines="2"
                         android:text="@string/purhcase_options"
                         android:textColor="@color/blackColor"
@@ -123,7 +123,7 @@
                                 android:id="@+id/btn_buy"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:fontFamily="@font/roboto_regular"
+                                android:fontFamily="@font/sukhumvittadmai_normal"
                                 android:foreground="?attr/selectableItemBackgroundBorderless"
                                 android:text="@string/buy_now"
                                 android:textAllCaps="false"
