--- a/app/src/main/res/layout/wifi_dialog.xml
+++ b/app/src/main/res/layout/wifi_dialog.xml
@@ -29,7 +29,7 @@
                 android:gravity="center_horizontal"
                 android:text="Waiting for WiFi"
                 android:textSize="15sp"
-                android:fontFamily="@font/roboto_medium"
+                android:fontFamily="@font/sukhumvittadmai_medium"
                 android:textColor="?attr/title_color"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:focusableInTouchMode="true"
@@ -43,7 +43,7 @@
                 android:gravity="center_vertical"
                 android:text="Your download will begin once you are come on WiFi. Or you can change the setting below:"
                 android:textSize="13sp"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:textColor="?attr/title_color"
                 android:layout_marginTop="@dimen/_25sdp"
                 android:focusableInTouchMode="true"
@@ -65,7 +65,7 @@
                     android:text="Download over WiFi"
                     android:textSize="15sp"
                     android:layout_weight="1"
-                    android:fontFamily="@font/roboto_bold"
+                    android:fontFamily="@font/sukhumvittadmai_bold"
                     android:textColor="?attr/title_color"
                     android:focusableInTouchMode="true"
                     />
@@ -91,7 +91,7 @@
                     android:focusable="true"
                     android:text="*You can chnage this from settings"
                     android:textSize="12sp"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:textColor="?attr/title_color"
                     android:focusableInTouchMode="true"
                     />
@@ -112,7 +112,7 @@
                     android:id="@+id/btn_start_download"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/moretitlecolor"
+                    android:background="@color/description_title_yellow"
                     android:text="OK"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent" />
