--- a/app/src/main/res/layout/article_activity.xml
+++ b/app/src/main/res/layout/article_activity.xml
@@ -107,7 +107,7 @@
                                     android:layout_height="wrap_content"
                                     android:ellipsize="end"
                                     android:layout_marginRight="30dp"
-                                    android:fontFamily="@font/roboto_medium"
+                                    android:fontFamily="@font/sukhumvittadmai_medium"
                                     android:maxLines="3"
                                     android:textColor="?attr/title_color"
                                     android:text="Mazhavil Manorama is a Mazhavil Manorama is a Mazhavil Manorama is a Mazhavil Manorama is a Mazhavil Manorama is a Mazhavil Manorama is a Mazhavil Manorama is a Mazhavil Manorama is a"
@@ -137,7 +137,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:ellipsize="end"
-                                    android:fontFamily="@font/roboto_regular"
+                                    android:fontFamily="@font/sukhumvittadmai_normal"
                                     android:lineHeight="@dimen/_20sdp"
                                     android:text=""
                                     android:textColor="?attr/movie_title_background_color"
