--- a/app/src/main/res/layout/fragment_comment_layout.xml
+++ b/app/src/main/res/layout/fragment_comment_layout.xml
@@ -66,7 +66,7 @@
                         android:id="@+id/tv_comment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:hint="@string/add_comment"
                         android:maxLines="1"
                         android:textColor="@color/subtitlecolor"
@@ -102,7 +102,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:focusableInTouchMode="true"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:hint="@string/add_comment"
                         android:inputType="textNoSuggestions|textVisiblePassword"
                         android:overScrollMode="always"
