--- a/app/src/main/res/layout/grid_circle_item.xml
+++ b/app/src/main/res/layout/grid_circle_item.xml
@@ -38,7 +38,7 @@
                     android:id="@+id/tvTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:gravity="center"
                     android:singleLine="true"
                     android:text=""
@@ -69,7 +69,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="3dp"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:gravity="center"
                         android:text="@string/exclusive"
                         android:textColor="@color/white"
@@ -92,7 +92,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:gravity="center"
                         android:text="@string/new_badge"
                         android:textColor="@color/white"
