--- a/app/src/main/res/layout/home_toolbar.xml
+++ b/app/src/main/res/layout/home_toolbar.xml
@@ -42,7 +42,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:text="@string/listing_title_text"
                     android:textColor="@color/white"
                     android:textSize="@dimen/headingToolbar" />
@@ -60,7 +60,7 @@
                     android:layout_marginLeft="@dimen/toolbarHomeLeft"
                     android:layout_toRightOf="@+id/back_layout"
                     android:contentDescription="TODO"
-                    android:fontFamily="@font/kefa_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:text="enveu"
                     android:textColor="@color/moretitlecolor"
                     android:textSize="32sp" />
