--- a/app/src/main/res/layout/landscape_shimmer_item.xml
+++ b/app/src/main/res/layout/landscape_shimmer_item.xml
@@ -66,7 +66,7 @@
                         android:layout_alignParentBottom="true"
                         android:layout_marginTop="@dimen/_30sdp"
                         android:background="@drawable/above_shado"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:gravity="left"
                         android:paddingLeft="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
@@ -92,7 +92,7 @@
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/NontonSize4"
                         android:background="@drawable/badge_background"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:gravity="center"
                         android:text="@string/exclusive"
                         android:textColor="@color/white"
@@ -116,7 +116,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:gravity="center"
                         android:text="@string/new_badge"
                         android:textColor="@color/white"
