--- a/app/src/main/res/layout/layout_carousel_circle_item.xml
+++ b/app/src/main/res/layout/layout_carousel_circle_item.xml
@@ -67,7 +67,7 @@
                             android:id="@+id/title_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_regular"
+                            android:fontFamily="@font/sukhumvittadmai_normal"
                             android:paddingRight="@dimen/_10sdp"
                             android:singleLine="true"
                             android:text="Watch Video ABC Episode 77 snndlkn kjbk kjbkj j"
@@ -77,7 +77,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_medium"
+                            android:fontFamily="@font/sukhumvittadmai_medium"
                             android:text="SONY MAX"
                             android:textColor="@color/white"
                             android:textSize="@dimen/_10sdp"
