--- a/app/src/main/res/layout/layout_carousel_square_item.xml
+++ b/app/src/main/res/layout/layout_carousel_square_item.xml
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|left"
                 android:background="@drawable/badge_background"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:gravity="top|left"
                 android:padding="2dp"
                 android:text="@string/exclusive"
@@ -78,7 +78,7 @@
                 android:layout_gravity="center|bottom"
                 android:layout_marginBottom="@dimen/new_badge_bottom_magin"
                 android:background="@drawable/badge_background"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:gravity="center"
                 android:padding="2dp"
                 android:text="@string/new_badge"
@@ -100,7 +100,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="40dp"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:gravity="bottom"
                     android:singleLine="true"
                     android:textColor="@color/white"
