--- a/app/src/main/res/layout/layout_hero_potrait_item.xml
+++ b/app/src/main/res/layout/layout_hero_potrait_item.xml
@@ -59,7 +59,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="40dp"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:gravity="bottom"
                     android:singleLine="true"
                     android:textColor="@color/white"
