--- a/app/src/main/res/layout/list_common_item.xml
+++ b/app/src/main/res/layout/list_common_item.xml
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="top|left"
                     android:ellipsize="end"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:maxLines="1"
                     android:text=""
                     android:textColor="@color/white"
@@ -73,7 +73,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:ellipsize="end"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:maxLines="1"
                     android:text=""
                     android:textColor="@color/edit_text"
@@ -86,7 +86,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:ellipsize="end"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:maxLines="2"
                     android:text=""
                     android:textColor="@color/edit_text"
