--- a/app/src/main/res/layout/list_row_season.xml
+++ b/app/src/main/res/layout/list_row_season.xml
@@ -25,7 +25,7 @@
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="6dp"
                 android:ellipsize="end"
-                android:fontFamily="@font/roboto_medium"
+                android:fontFamily="@font/sukhumvittadmai_medium"
                 android:text="7"
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_medium" />
@@ -39,7 +39,7 @@
                 android:layout_toLeftOf="@+id/llPlaying"
                 android:layout_toRightOf="@+id/serial_num"
                 android:ellipsize="end"
-                android:fontFamily="@font/roboto_medium"
+                android:fontFamily="@font/sukhumvittadmai_medium"
                 android:singleLine="true"
                 android:text=""
                 android:textColor="@color/white"
@@ -61,7 +61,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:background="@drawable/rounded_button"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_normal"
                     android:paddingLeft="@dimen/NontonSize8"
                     android:paddingTop="@dimen/NontonSize3"
                     android:paddingRight="@dimen/NontonSize8"
@@ -91,7 +91,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_27sdp"
             android:ellipsize="end"
-            android:fontFamily="@font/roboto_regular"
+            android:fontFamily="@font/sukhumvittadmai_normal"
             android:text=""
             android:textColor="@color/subtitlecolor"
             android:textSize="@dimen/font_xsmall"
@@ -105,7 +105,7 @@
             android:layout_marginRight="9dp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:ellipsize="end"
-            android:fontFamily="@font/roboto_regular"
+            android:fontFamily="@font/sukhumvittadmai_normal"
             android:lineSpacingExtra="2sp"
             android:text=""
             android:textColor="@color/white"
