--- a/app/src/main/res/layout/membership_plan.xml
+++ b/app/src/main/res/layout/membership_plan.xml
@@ -160,7 +160,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:drawablePadding="@dimen/NontonSize10"
-                                        android:fontFamily="@font/roboto_regular"
+                                        android:fontFamily="@font/sukhumvittadmai_normal"
                                         android:text="@string/buy_now"
                                         android:textColor="@color/white"
                                         android:textSize="@dimen/TextSize12"
@@ -213,7 +213,7 @@
 
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:fontFamily="@font/roboto_regular"
+                                android:fontFamily="@font/sukhumvittadmai_normal"
                                 android:foreground="?attr/selectableItemBackgroundBorderless"
                                 android:text="@string/buy_now"
                                 android:textAllCaps="false"
@@ -239,7 +239,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/NontonSize10"
-                                android:fontFamily="@font/roboto_regular"
+                                android:fontFamily="@font/sukhumvittadmai_normal"
                                 android:textSize="@dimen/buyVideo" />
 
                         </RelativeLayout>
@@ -259,7 +259,7 @@
                                 android:layout_centerInParent="true"
                                 android:layout_marginLeft="@dimen/NontonSize3"
                                 android:layout_marginRight="@dimen/NontonSize8"
-                                android:fontFamily="@font/roboto_regular"
+                                android:fontFamily="@font/sukhumvittadmai_normal"
                                 android:gravity="left"
                                 android:text="@string/please_unsubcribe_to_continue"
                                 android:textSize="@dimen/buyVideo" />
@@ -282,7 +282,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textColor="@color/white"
-                                android:fontFamily="@font/roboto_regular"
+                                android:fontFamily="@font/sukhumvittadmai_normal"
                                 android:text="@string/issuepage"
                                 android:textSize="@dimen/font_large"
 
@@ -294,7 +294,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/_4sdp"
                                 android:layout_toRightOf="@+id/issue"
-                                android:fontFamily="@font/roboto_regular"
+                                android:fontFamily="@font/sukhumvittadmai_normal"
                                 android:text="@string/Contact_us"
                                 android:textColor="@color/themeColorDark"
                                 android:textSize="@dimen/font_large" />
