--- a/app/src/main/res/layout/row_comments.xml
+++ b/app/src/main/res/layout/row_comments.xml
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:gravity="bottom"
                 android:text=""
                 android:textColor="@color/white"
@@ -62,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="@dimen/NontonSize1"
-                android:fontFamily="@font/roboto_medium"
+                android:fontFamily="@font/sukhumvittadmai_medium"
                 android:text=""
                 android:textColor="@color/white"
                 android:textSize="@dimen/descriptionRowItem" />
