--- a/app/src/main/res/layout/row_slider_circlular.xml
+++ b/app/src/main/res/layout/row_slider_circlular.xml
@@ -47,7 +47,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentBottom="true"
-                        android:fontFamily="@font/roboto_medium"
+                        android:fontFamily="@font/sukhumvittadmai_medium"
                         android:gravity="left"
                         android:singleLine="true"
                         android:text="This is the label"
@@ -79,7 +79,7 @@
                         android:id="@+id/start_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/roboto_medium"
+                        android:fontFamily="@font/sukhumvittadmai_medium"
                         android:text="1"
                         android:textColor="@color/white"
                         android:textSize="@dimen/font_medium" />
@@ -87,7 +87,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/roboto_medium"
+                        android:fontFamily="@font/sukhumvittadmai_medium"
                         android:text="/"
                         android:textColor="@color/white"
                         android:textSize="@dimen/font_medium" />
@@ -96,7 +96,7 @@
                         android:id="@+id/end_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/roboto_medium"
+                        android:fontFamily="@font/sukhumvittadmai_medium"
                         android:text="1"
                         android:textColor="@color/white"
                         android:textSize="@dimen/font_medium" />
