--- a/app/src/main/res/layout/row_slider_live.xml
+++ b/app/src/main/res/layout/row_slider_live.xml
@@ -85,7 +85,7 @@
                             android:id="@+id/start_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_medium"
+                            android:fontFamily="@font/sukhumvittadmai_medium"
                             android:text="1"
                             android:textColor="@color/white"
                             android:textSize="@dimen/font_medium" />
@@ -93,7 +93,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_medium"
+                            android:fontFamily="@font/sukhumvittadmai_medium"
                             android:text="/"
                             android:textColor="@color/white"
                             android:textSize="@dimen/font_medium" />
@@ -102,7 +102,7 @@
                             android:id="@+id/end_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_medium"
+                            android:fontFamily="@font/sukhumvittadmai_medium"
                             android:text="1"
                             android:textColor="@color/white"
                             android:textSize="@dimen/font_medium" />
