--- a/app/src/main/res/layout/season_item.xml
+++ b/app/src/main/res/layout/season_item.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
-        android:fontFamily="@font/rubik_medium"
+        android:fontFamily="@font/sukhumvittadmai_bold"
         android:paddingTop="@dimen/_8sdp"
         android:text="@string/select_season"
         android:textColor="@color/title_header_color"
