--- a/app/src/main/res/layout/select_download_video_quality.xml
+++ b/app/src/main/res/layout/select_download_video_quality.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Ankur"
-            android:fontFamily="@font/roboto_regular"
+            android:fontFamily="@font/sukhumvittadmai_normal"
             android:textSize="@dimen/font_medium_large"
             android:paddingLeft="@dimen/NontonSize10"
             android:paddingRight="@dimen/NontonSize10"
