--- a/app/src/main/res/layout/skip.xml
+++ b/app/src/main/res/layout/skip.xml
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:gravity="center"
                 android:padding="@dimen/DobPaddingBottom"
                 android:text="@string/skip"
@@ -92,7 +92,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:hint="DD/MM/YYYY"
                         android:textColor="@color/blackColor"
                         android:textSize="@dimen/fullnameTextSize" />
@@ -125,7 +125,7 @@
                         android:layout_height="wrap_content"
                         android:background="@null"
                         android:digits="0123456789"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:hint="XXXXXXXXXX"
                         android:imeOptions="actionDone"
                         android:inputType="number"
@@ -153,7 +153,7 @@
                         style="@style/ProfileRadioButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:scaleX="0.8"
                         android:scaleY="0.8"
                         android:text="@string/male"
@@ -169,7 +169,7 @@
                         android:layout_below="@+id/radioGroup1"
                         android:layout_alignLeft="@+id/radioGroup1"
                         android:layout_marginLeft="@dimen/NontonSize35"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:scaleX="0.8"
                         android:scaleY="0.8"
                         android:text="@string/female"
@@ -192,7 +192,7 @@
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/NontonSize5"
                         android:focusableInTouchMode="true"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:gravity="center"
                         android:text="@string/save"
                         android:textColor="@color/white"
