--- a/app/src/main/res/layout/square_listing_item.xml
+++ b/app/src/main/res/layout/square_listing_item.xml
@@ -112,7 +112,7 @@
 
                         android:layout_marginTop="@dimen/_30sdp"
                         android:background="@drawable/above_shado"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/sukhumvittadmai_normal"
                         android:gravity="left"
                         android:paddingLeft="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
