--- a/app/src/main/res/values-v28/styles.xml
+++ b/app/src/main/res/values-v28/styles.xml
@@ -33,7 +33,7 @@
     </style>
 
     <style name="Widget.BottomNavigationView" parent="Widget.Design.BottomNavigationView">
-        <item name="fontFamily">@font/roboto_regular</item>
+        <item name="fontFamily">@font/sukhumvittadmai_normal</item>
         <item name="android:textSize">@dimen/_8sdp</item>
 
     </style>
