splash screen wip

--- a/app/src/main/res/layout-sw600dp-land/activity_splash.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_splash.xml
@@ -56,12 +56,13 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="200dp"
+            android:layout_marginBottom="10dp"
             android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            />
 
         <ProgressBar
             android:id="@+id/progress_bar"
